Migrate to Mojang mappings