@@ -1,11 +1,11 @@
 package chylex.bettercontrols.gui;
 import chylex.bettercontrols.gui.OptionListWidget.Entry;
-import net.minecraft.client.gui.Drawable;
-import net.minecraft.client.gui.Element;
-import net.minecraft.client.gui.Selectable;
-import net.minecraft.client.gui.widget.ClickableWidget;
-import net.minecraft.client.gui.widget.ElementListWidget;
-import net.minecraft.client.util.math.MatrixStack;
+import com.mojang.blaze3d.vertex.PoseStack;
+import net.minecraft.client.gui.components.AbstractWidget;
+import net.minecraft.client.gui.components.ContainerObjectSelectionList;
+import net.minecraft.client.gui.components.Widget;
+import net.minecraft.client.gui.components.events.GuiEventListener;
+import net.minecraft.client.gui.narration.NarratableEntry;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -14,7 +14,7 @@ import java.util.function.Function;
 import java.util.stream.Collectors;
 import static chylex.bettercontrols.util.Statics.MINECRAFT;
 
-public final class OptionListWidget extends ElementListWidget<Entry> {
+public final class OptionListWidget extends ContainerObjectSelectionList<Entry> {
 	public static final int ROW_WIDTH = 408;
 	public static final int ROW_PADDING = 2;
 	
@@ -29,19 +29,19 @@ public final class OptionListWidget extends ElementListWidget<Entry> {
 		return (column * ROW_WIDTH) / 4;
 	}
 	
-	private static Offset getElementOffset(final Element element) {
-		if (element instanceof Widget) {
-			return new Offset(((Widget)element).getX(), ((Widget)element).getY());
+	private static Offset getElementOffset(final GuiEventListener element) {
+		if (element instanceof OptionWidget) {
+			return new Offset(((OptionWidget)element).getX(), ((OptionWidget)element).getY());
 		}
-		else if (element instanceof ClickableWidget) {
-			return new Offset(((ClickableWidget)element).x, ((ClickableWidget)element).y);
+		else if (element instanceof AbstractWidget) {
+			return new Offset(((AbstractWidget)element).x, ((AbstractWidget)element).y);
 		}
 		else {
 			return new Offset(0, 0);
 		}
 	}
 	
-	public interface Widget extends Element, Drawable {
+	public interface OptionWidget extends GuiEventListener, Widget {
 		int getX();
 		int getY();
 		void setX(int x);
@@ -58,7 +58,7 @@ public final class OptionListWidget extends ElementListWidget<Entry> {
 		}
 	}
 	
-	public OptionListWidget(final int top, final int bottom, final int width, final int height, final List<Element> widgets, final int innerHeight) {
+	public OptionListWidget(final int top, final int bottom, final int width, final int height, final List<GuiEventListener> widgets, final int innerHeight) {
 		super(MINECRAFT, width, height, top, bottom, innerHeight);
 		addEntry(new Entry(widgets));
 	}
@@ -74,47 +74,49 @@ public final class OptionListWidget extends ElementListWidget<Entry> {
 	}
 	
 	@Override
-	protected int getScrollbarPositionX() {
+	protected int getScrollbarPosition() {
 		return (width + ROW_WIDTH) / 2 + 4;
 	}
 	
-	protected static final class Entry extends ElementListWidget.Entry<Entry> {
-		private final List<Element> elements;
-		private final List<Selectable> selectables;
-		private final Map<Element, Offset> offsets;
+	protected static final class Entry extends ContainerObjectSelectionList.Entry<Entry> {
+		private final List<GuiEventListener> elements;
+		private final List<NarratableEntry> narratables;
+		private final Map<GuiEventListener, Offset> offsets;
 		
-		public Entry(final List<Element> elements) {
+		public Entry(final List<GuiEventListener> elements) {
 			this.elements = new ArrayList<>(elements);
-			this.selectables = elements.stream().filter(e -> e instanceof Selectable).map(e -> (Selectable)e).toList();
+			this.narratables = elements.stream().filter(e -> e instanceof NarratableEntry).map(e -> (NarratableEntry)e).collect(Collectors.toList());
 			this.offsets = elements.stream().collect(Collectors.toMap(Function.identity(), OptionListWidget::getElementOffset));
 		}
 		
 		@Override
-		public List<? extends Element> children() {
+		public List<? extends GuiEventListener> children() {
 			return Collections.unmodifiableList(elements);
 		}
 		
 		@Override
-		public List<? extends Selectable> method_37025() {
-			return Collections.unmodifiableList(selectables);
+		public List<? extends NarratableEntry> narratables() {
+			return Collections.unmodifiableList(narratables);
 		}
 		
 		@Override
-		public void render(final MatrixStack matrices, final int index, final int y, final int x, final int entryWidth, final int entryHeight, final int mouseX, final int mouseY, final boolean hovered, final float tickDelta) {
-			for (final Element element : elements) {
+		public void render(final PoseStack matrices, final int index, final int y, final int x, final int entryWidth, final int entryHeight, final int mouseX, final int mouseY, final boolean hovered, final float tickDelta) {
+			for (final GuiEventListener element : elements) {
 				final Offset offset = offsets.get(element);
 				
-				if (element instanceof final ClickableWidget button) {
+				if (element instanceof AbstractWidget) {
+					final AbstractWidget button = (AbstractWidget)element;
 					button.x = x + offset.x;
 					button.y = y + offset.y;
 				}
-				else if (element instanceof final Widget widget) {
+				else if (element instanceof OptionWidget) {
+					final OptionWidget widget = (OptionWidget)element;
 					widget.setX(x + offset.x);
 					widget.setY(y + offset.y);
 				}
 				
-				if (element instanceof final Drawable drawable) {
-					drawable.render(matrices, mouseX, mouseY, tickDelta);
+				if (element instanceof Widget) {
+					((Widget)element).render(matrices, mouseX, mouseY, tickDelta);
 				}
 			}
 		}
